--- a/ansible/ci.yml
+++ b/ansible/ci.yml
@@ -1,13 +1,14 @@
 ---
-- hosts: ci
+- hosts: container_hosts
   gather_facts: False
   tasks:
     - name: install python to run ansible
       raw: |
         [ -e /usr/bin/python ] || apt-get -q=2 update && apt-get -q=2 install -qq python-minimal python-apt
 
-- hosts: ci
-  vars_files:
-    - vars/passwords.yml
+- hosts: container_hosts
+  roles:
+    - common
+    #- lxd_host
   tasks:
     - debug: msg='nothing there yet'
