--- a/ansible/Vagrantfile
+++ b/ansible/Vagrantfile
@@ -1,20 +1,16 @@
-hosts = {}
-File.open('vagrant_inventory').each do |line|
-  if (m = line.match(/([^ ]+) .*ansible_ssh_host=((?:[0-9]{1,3}\.){3}[0-9]{1,3})/))
-    hosts[m[1]] = m[2]
-  end
-end
+hosts = YAML.load_file('group_vars/all')['host_ids']
 
 Vagrant.configure(2) do |config|
   config.vm.box = 'ubuntu/xenial64'
   config.vm.synced_folder '.', '/vagrant', disabled: true
 
-  hosts.each do |hostname, ipv4_address|
+  hosts.each do |hostname, id|
     config.vm.define hostname do |machine|
 
       machine.vm.box = 'ubuntu/xenial64'
-      machine.vm.hostname = 'ci'
-      machine.vm.network 'private_network', ip: ipv4_address
+      machine.vm.hostname = hostname
+      machine.vm.network 'private_network', ip: "172.16.1.#{id}"
+      # machine.vm.network 'private_network', ip: "fd12:3456:789a:#{id}::1"
       machine.vm.synced_folder '.', '/vagrant', disabled: true
       machine.vm.provision('ansible') do |ansible|
         ansible.verbose = 'v'
