--- a/ansible/roles/jenkins/tasks/main.yml
+++ b/ansible/roles/jenkins/tasks/main.yml
@@ -5,7 +5,7 @@
 - name: add jenkins apt repo
   apt_repository: { repo: 'deb https://pkg.jenkins.io/debian-stable binary/', update_cache: yes }
 - name: install jenkins
-  apt: { name: jenkins=2.32.1, install_recommends: no }
+  apt: { name: "jenkins={{ jenkins_version }}", install_recommends: no, update_cache: yes, cache_valid_time: 3600 }
 - name: set http port
   lineinfile:
     dest: /etc/default/jenkins
