--- a/ansible/ci.yml
+++ b/ansible/ci.yml
@@ -44,6 +44,7 @@
         - mongodb-server
         - pkg-config
         - python-dev
+        - python-yaml
         - redis-server
         - unzip
     - name: use ld.gold
