--- a/ansible/ci.yml
+++ b/ansible/ci.yml
@@ -49,6 +49,18 @@
         - unzip
     - name: use ld.gold
       alternatives: { name: ld, link: /usr/bin/ld, path: /usr/bin/ld.gold }
+    - name: add load_travis_script command
+      copy:
+        dest: /usr/local/bin/get_travis_test_script
+        mode: 0555
+        content: |
+          #!/usr/bin/env python
+          import sys, yaml
+
+          script = yaml.load(open('.travis.yml', 'r')).get('script', '')
+          if isinstance(script, list):
+            script = '\n'.join(script)
+          print(script)
 
 - hosts: ci2.dawg.eu
   roles:
