--- a/ansible/ci.yml
+++ b/ansible/ci.yml
@@ -42,12 +42,14 @@
         - libssl-dev
         - libzmq3-dev
         - mongodb-server
+        - moreutils # sponge et.al.
         - pkg-config
         - python-dev
         - python-yaml
         - python3-nose
         - redis-server
         - unzip
+      tags: deps
     - name: use ld.gold
       alternatives: { name: ld, link: /usr/bin/ld, path: /usr/bin/ld.gold }
     - name: add load_travis_script command
