--- a/ansible/roles/haproxy/tasks/main.yml
+++ b/ansible/roles/haproxy/tasks/main.yml
@@ -49,7 +49,7 @@
       {% for domain, backend in backends.iteritems() -%}
       backend {{ domain }}
               {{ backend | indent(8) }}
-      {%- endfor %}
+      {% endfor %}
   when: ansible_virtualization_type != 'virtualbox'
   notify: restart haproxy
 
