fixup haproxy cfg
- add back ci2.dawg.eu

--- a/ansible/ci.yml
+++ b/ansible/ci.yml
@@ -73,6 +73,6 @@
         ci.dlang.io: |
           mode http
           server s1 jenkins.ci.lxd:8080
-        ci.dlang.io: |
+        ci2.dawg.eu: |
           mode http
           server s1 jenkins.ci.lxd:8080
