fix --check mode for jenkins slaves
- always need to query the agent secret

--- a/ansible/roles/jenkins_slave/tasks/main.yml
+++ b/ansible/roles/jenkins_slave/tasks/main.yml
@@ -14,6 +14,7 @@
       script=import hudson.model.Hudson; println(Hudson.instance.slaves.find { it.name == '{{ inventory_hostname_short }}' }.getComputer().getJnlpMac())
     return_content: yes
   register: response
+  check_mode: no
 - set_fact:
     secret: "{{ response.content }}"
 - name: add jenkins slave service
