--- a/ansible/roles/jenkins/defaults/main.yml
+++ b/ansible/roles/jenkins/defaults/main.yml
@@ -1,5 +1,5 @@
 ---
-jenkins_version: 2.32.2
+jenkins_version: 2.46.1 # LTS
 jenkins_admin_username: admin
 jenkins_admin_password:
 jenkins_http_port:
