--- a/ansible/Vagrantfile
+++ b/ansible/Vagrantfile
@@ -17,6 +17,7 @@ Vagrant.configure(2) do |config|
         shell.inline = '[ -e /usr/bin/python ] || { apt-get update -qq && apt-get install -qq --no-install-recommends python-minimal python-apt; }'
       end
       machine.vm.provision('ansible') do |ansible|
+        ansible.force_remote_user = false
         ansible.verbose = 'v'
         ansible.raw_arguments = ['--diff']
         ansible.playbook = 'ci.yml'
