--- a/ansible/roles/lxd_host/tasks/main.yml
+++ b/ansible/roles/lxd_host/tasks/main.yml
@@ -74,3 +74,16 @@
     owner: 100000 # TODO: subuid
     mode: 0400
   with_items: "{{ groups[inventory_hostname_short + '_containers'] }}"
+  when: ansible_virtualization_type != 'virtualbox'
+
+# use the vagrant generated key to access containers
+- name: add authorized_keys (vagrant)
+  copy:
+    remote_src: True
+    src: "/home/{{ ansible_user }}/.ssh/authorized_keys" # TODO: hardcoded path
+    dest: "/var/lib/lxd/containers/{{ item.split('.')[0] }}/rootfs/root/.ssh/authorized_keys"
+    group: 100000 # TODO: subgid
+    owner: 100000 # TODO: subuid
+    mode: 0400
+  with_items: "{{ groups[inventory_hostname_short + '_containers'] }}"
+  when: ansible_virtualization_type == 'virtualbox'
