--- a/ansible/Vagrantfile
+++ b/ansible/Vagrantfile
@@ -18,8 +18,7 @@ Vagrant.configure(2) do |config|
       end
       machine.vm.provision('ansible') do |ansible|
         ansible.force_remote_user = false
-        ansible.verbose = 'v'
-        ansible.raw_arguments = ['--diff']
+        ansible.raw_arguments = (ENV['ANSIBLE_ARGS'] || '').split
         ansible.playbook = 'ci.yml'
         ansible.limit = 'all' # also provision containers
         ansible.inventory_path = 'vagrant_inventory'
