--- a/ansible/ci.yml
+++ b/ansible/ci.yml
@@ -14,6 +14,8 @@
   vars:
     - jenkins_http_port: 8080
     - jenkins_slave_agent_port: 55000
+    - jenkins_use_github_auth: true
+    - jenkins_admin_username: MartinNowak
   vars_files:
     - vars/passwords.yml # jenkins_admin_password
   roles:
@@ -24,8 +26,6 @@
       with_items: [git, jq]
 
 - hosts: jenkins_slaves
-  vars:
-    - jenkins_addr: ci.dlang.io
   vars_files:
     - vars/passwords.yml # jenkins_admin_password
   roles:
