--- a/ansible/ci.yml
+++ b/ansible/ci.yml
@@ -14,8 +14,8 @@
   vars:
     - jenkins_http_port: 8080
     - jenkins_slave_agent_port: 55000
-    - jenkins_use_github_auth: true
     - jenkins_admin_username: MartinNowak
+    - jenkins_github_organizations: [dlang]
   vars_files:
     - vars/passwords.yml # jenkins_admin_password
   roles:
@@ -26,6 +26,8 @@
       with_items: [git, jq]
 
 - hosts: jenkins_slaves
+  vars:
+    - jenkins_admin_username: MartinNowak
   vars_files:
     - vars/passwords.yml # jenkins_admin_password
   roles:
