--- a/ansible/roles/jenkins/defaults/main.yml
+++ b/ansible/roles/jenkins/defaults/main.yml
@@ -1,6 +1,21 @@
 ---
 jenkins_version: 2.60.1-1 # LTS
-jenkins_admin_username: admin
-jenkins_admin_password:
 jenkins_http_port:
 jenkins_slave_agent_port:
+jenkins_plugins: []
+# public URL of the instance, e.g. https://ci.example.com
+jenkins_url:
+# also see https://plugins.jenkins.io/github-oauth
+# wether to use github or password auth
+jenkins_use_github_auth: false
+# either github username or admin username
+jenkins_admin_username: admin
+# personal github access token or password
+jenkins_admin_password:
+# optional admin email address
+jenkins_admin_email:
+# organizations with write access
+jenkins_github_organizations: []
+# client id and secret of registered github app
+jenkins_github_app_client_id:
+jenkins_github_app_client_secret:
