regularly dedup and rebalance btrfs

--- a/ansible/roles/lxd_host/tasks/main.yml
+++ b/ansible/roles/lxd_host/tasks/main.yml
@@ -87,3 +87,17 @@
     mode: 0400
   with_items: "{{ groups[inventory_hostname_short + '_containers'] }}"
   when: ansible_virtualization_type == 'virtualbox'
+
+# deduplicate filesystem and then rebalance sparse btrfs extends to regain unallocated space
+# https://btrfs.wiki.kernel.org/index.php/Problem_FAQ#I_get_.22No_space_left_on_device.22_errors.2C_but_df_says_I.27ve_got_lots_of_space
+- name: install duperemove
+  apt: { name: duperemove, install_recommends: no }
+  when: ansible_mounts[0].fstype == 'btrfs'
+- name: run btrfs balance
+  cron:
+    name: rebalance btrfs
+    minute: 0
+    hour: 4
+    weekday: 2 # Tue
+    job: duperemove -rdh /bin /boot /etc /lib /lib64 /sbin /usr /var && btrfs balance start -musage=5 -dusage=5 /
+  when: ansible_mounts[0].fstype == 'btrfs'
