--- a/ansible/roles/jenkins/defaults/main.yml
+++ b/ansible/roles/jenkins/defaults/main.yml
@@ -1,5 +1,5 @@
 ---
-jenkins_version: 2.60.1-1 # LTS
+jenkins_version: 2.60.2 # LTS
 jenkins_http_port:
 jenkins_slave_agent_port:
 jenkins_plugins: []
