--- a/ansible/roles/dub_registry_mirror/files/dub-registry-mirror.service
+++ b/ansible/roles/dub_registry_mirror/files/dub-registry-mirror.service
@@ -6,7 +6,7 @@ After=network.target remote-fs.target nss-lookup.target
 Type=simple
 Group=dub-registry
 User=dub-registry
-ExecStart=/home/dub-registry/dub-registry/dub-registry --mirror=https://code.dlang.org
+ExecStart=/home/dub-registry/dub-registry/dub-registry --mirror=https://code.dlang.org --bind=0.0.0.0
 WorkingDirectory=/home/dub-registry/dub-registry
 MemoryLimit=1.5G
 Restart=on-failure
