configure MTA to receive cron mails

--- a/ansible/roles/lxd_host/handlers/main.yml
+++ b/ansible/roles/lxd_host/handlers/main.yml
@@ -3,3 +3,7 @@
   command: dpkg-reconfigure --frontend noninteractive lxd
 - name: resolvconf
   command: resolvconf -u
+- name: newaliases
+  command: newaliases
+- name: restart postfix
+  service: { name: postfix, state: restarted }
