add on demand jenkins slaves
- use dynamic inventory to get hosts from ProfitBricks API
- forward jenkins slave agent port to host
- remove direct connections over internal LXD bridge
- cache facts so that other host's IP addresses are available

--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,5 +1,10 @@
 [defaults]
-inventory = inventory
+gathering = smart
+fact_caching = jsonfile
+fact_caching_connection = .cache
+fact_caching_timeout = 86400
+
+inventory = inventories
 nocows = 1
 
 # explictly list library/roles folders for playbooks in subfolders
