--- a/ansible/roles/common/handlers/main.yml
+++ b/ansible/roles/common/handlers/main.yml
@@ -1,3 +1,7 @@
 ---
+- name: restart postfix
+  service: { name: postfix, state: restarted }
 - name: restart sshd
   service: { name: sshd, state: restarted }
+- name: newaliases
+  command: newaliases
