update mongodb to 3.4 to support new queries

--- a/ansible/roles/dub_registry_mirror/handlers/main.yml
+++ b/ansible/roles/dub_registry_mirror/handlers/main.yml
@@ -5,3 +5,9 @@
   service: { name: dub-registry-mirror, enabled: yes }
 - name: restart dub-registry-mirror
   service: { name: dub-registry-mirror, enabled: yes, state: restarted }
+- name: restart dub-registry-mirror
+  service: { name: dub-registry-mirror, enabled: yes, state: restarted }
+- name: enable mongod
+  service: { name: mongod, enabled: yes }
+- name: restart mongod
+  service: { name: mongod, enabled: yes, state: restarted }
