--- a/ansible/roles/common/handlers/main.yml
+++ b/ansible/roles/common/handlers/main.yml
@@ -1,6 +1,8 @@
 ---
 - name: restart postfix
   service: { name: postfix, state: restarted }
+- name: restart systemd-journald
+  service: { name: systemd-journald, state: restarted }
 - name: restart sshd
   service: { name: sshd, state: restarted }
 - name: newaliases
