--- a/ansible/ci.yml
+++ b/ansible/ci.yml
@@ -117,6 +117,7 @@
         - libblas-dev
         - libbz2-dev
         - libcairo-dev
+        - libclang-4.0-dev # dstep
         - libcurl4-gnutls-dev
         - libevent-dev
         - libgcrypt20-dev
